--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -5,17 +5,17 @@ permalink: /publications/
 author_profile: true
 ---
 
-| Entry            | Item   |                                                              |
-| --------         | ------ | ------------------------------------------------------------ |
-| [John Doe](#)    | 2016   | Description of the item in the list                          |
-| [Jane Doe](#)    | 2019   | Description of the item in the list                          |
-| [Doe Doe](#)     | 2022   | Description of the item in the list                          |
+
 
 {% if site.author.googlescholar %}
   <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
 {% endif %}
 
 {% include base_path %}
+
+
+
+asdadsa
 
 <!-- New style rendering if publication categories are defined -->
 {% if site.publication_category %}
